# solana2022-AMM

./: .gitignore  Anchor.toml  FEATURE_COMPLETION_SUMMARY.md  README.md
programs/safe-transfer-hook/: Cargo.toml
programs/safe-transfer-hook/src/: lib.rs
programs/token2022-amm/src/: error.rs  lib.rs
programs/token2022-amm/src/instructions/: amm_pool.rs  governance.rs  liquidity.rs  mod.rs  trading.rs  whitelist.rs
programs/token2022-amm/src/state/: amm_pool.rs  hook_proposal.rs  mod.rs  whitelist.rs
scripts/: simulation-service.ts
sdk/: index.ts
tests/: comprehensive-integration.ts  token2022-amm.ts  token2022-integration.ts
